# llm_peft

./: .gitignore  LICENSE  README.md  pyproject.toml
src/llm_peft/: __init__.py  arguments.py  dataset.py  finetune_generation.py  metric.py  test_load_data.py  train.sh  trainer.py  trainer_seq2seq.py  tuning.py
src/llm_peft/baichuan2/: lora_argument.json
src/llm_peft/chatglm2/: lora_argument.json  pt_argument.json  sft_argument.json
src/llm_peft/chatglm3/: lora_argument.json  pt_argument.json
src/llm_peft/data/: __init__.py  dataset.py  template.py
tests/: test_version.py
