[tool.poetry]
name = "llm_peft"
version = "0.1.0"
description = "llm-peft project"
readme = "README.md"
authors = ["shixingliang <1218197792@qq.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "4.30.2"
datasets = "^2.15.0"
torch = "^2.1.1"
peft = "^0.6.2"
jieba = "^0.42.1"
rouge-chinese = "^1.0.3"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120
